this time for sure...

--- a/Code/index.html
+++ b/Code/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="sidenav">
-            <a href="introPage.html">
+            <a href="index.html">
               <img src="sprites/intro_cart_final.png"> 
             </a>
             <a href="tutorialPage.html">
