--- a/Code/submissionPage.html
+++ b/Code/submissionPage.html
@@ -9,7 +9,7 @@
 </head>
 <body class="pagesubmit">
     <div class="sidenav">
-            <a href="introPage.html">
+            <a href="index.html">
               <img src="sprites/intro_cart_final.png"> 
             </a>
             <a href="tutorialPage.html">
