--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </button>
                 </a>
             </div>
-            <h2 class="text">Description: Spend 5 hours creating a polished, small minigame, earn a 20$ grant to purchase game development tools to kickstart your hobby! In addition to this, every submission will be featured in a group Hack Club minigame collection!</h2>
+            <h2 class="text">Description: Spend 5 hours creating a polished, small minigame, earn a 20$ (+4 per added hour) grant to purchase game development tools to kickstart your hobby! In addition to this, every submission will be featured in a group Hack Club minigame collection!</h2>
             <img src="sprites/blue_cloud_background.png" class="underhang">
         </div>
 
@@ -39,8 +39,8 @@
             <a href="submissionPage.html">
               <img src="sprites/submit_cart_final.png"> 
             </a>
-            <a>
-                <img src="sprites/gallery_cart_final.png" class="coming_soon"> 
+            <a href="galleryPage.html">
+                <img src="sprites/gallery_cart_final.png"> 
             </a>
         </div>
 
