--- a/tutorialPage.html
+++ b/tutorialPage.html
@@ -18,8 +18,8 @@
             <a href="submissionPage.html">
               <img src="sprites/submit_cart_final.png"> 
             </a>
-            <a>
-                <img src="sprites/gallery_cart_final.png" class="coming_soon"> 
+            <a href="galleryPage.html">
+                <img src="sprites/gallery_cart_final.png"> 
             </a>
 
      </div>
