fixed link hopefully

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 class="text">Program a Minigame, join a collection!</h1>
             
             <div class="submitline">
-                <a href="https://join.slack.com/t/hackclub/shared_invite/zt-384d04ll2-o_1x3vLM5d7wi8OoWXDMkg" target="_blank">
+                <a href="https://hackclub.slack.com/archives/C093SSC3Z16" target="_blank">
                     <!--<input type="email" class="emailsub" placeholder="Enter your email!" value required>-->
                     <button type="submit" class="buttonsub">
                         Join the Slack!
