Added in the new data!

--- a/galleryPage.html
+++ b/galleryPage.html
@@ -33,7 +33,7 @@
         <div class="submitline">
          <select name="current_set" id="gamesVol" onChange="updateTable(this.value)">
            <option value="jsonData1">Minigame Vol. 1</option>
-           <option value="jsonData2">Minigame Vol. 2</option>
+           <!--<option value="jsonData2">Minigame Vol. 2</option>-->
          </select>
         </div>
         
